# OncoScan

./: .dockerignore  .gitignore  Dockerfile  ProjectDescription.md  README.md  cloudbuild.yaml  main.py  pyproject.toml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
src/oncoscan/: __init__.py  api.py  config.py  gradcam.py  inference.py  model.py  model_new.py  schemas.py
src/oncoscan/static/: app.js  index.html  styles.css
tests/: test_api.py
