[project]
name = "oncoscan"
version = "0.1.0"
description = "Tumor detection API with Grad-CAM explainability for brain MRI and breast scan images."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "matplotlib>=3.10.9",
    "numpy>=2.0.0",
    "pandas>=3.0.3",
    "pillow>=10.4.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "seaborn>=0.13.2",
    "split-folders>=0.6.1",
    "torch>=2.4.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.27.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[project.scripts]
oncoscan = "main:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.package-data]
oncoscan = ["static/*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
